<resources>
    <string name="app_name">Sigma</string>
    <string name="app_nombre">Sigma</string>
    <string name="texto_inicia_sesion">Inicia Sesion con Google</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="tab_servicios">Servicios</string>
    <string name="servicio">Servicio</string>
    <string name="his">Horario Inicio Servicio</string>
    <string name="hts">Horario Termino Servicio</string>
    <string name="carga">Carga</string>
    <string name="fecha">Fecha</string>
    <string name="agregar">Agregar</string>
    <string name="menu_eliminar_cardview">Eliminar Servicio</string>
    <string name="tren">N° Tren</string>
    <string name="coche">Coche P/N/R</string>
    <string name="lugar_inicio">Lugar de Inicio</string>
    <string name="hora_inicio">Hora de Inicio</string>
    <string name="radio">Radio Tetra</string>
    <string name="hora_termino">Hora de Termino</string>
    <string name="lugar_termino">Lugar de Termino</string>
</resources>
