<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".actividades.CrearVueltaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:scaleType="centerCrop"
            android:layout_marginStart="@dimen/margin_izq_icon"
            android:src="@mipmap/ic_tren"/>

        <EditText
            android:id="@+id/edt_tren"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:inputType="number"
            android:hint="@string/tren"
            android:singleLine="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/margin_top_form_servicio"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:scaleType="centerCrop"
            android:layout_marginStart="@dimen/margin_izq_icon"
            android:src="@mipmap/ic_coche"/>

        <EditText
            android:id="@+id/edt_coche"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:inputType="number"
            android:hint="@string/coche"
            android:singleLine="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/margin_top_form_servicio"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:scaleType="centerCrop"
            android:layout_marginStart="@dimen/margin_izq_icon"
            android:src="@mipmap/ic_lugar_inicio"/>

        <EditText
            android:id="@+id/edt_lugar_inicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:inputType="text"
            android:hint="@string/lugar_inicio"
            android:singleLine="true"/>

    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:layout_marginTop="@dimen/margin_top_form_servicio"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:scaleType="centerCrop"
        android:layout_marginStart="@dimen/margin_izq_icon"
        android:src="@mipmap/ic_hora_inicio"/>

    <EditText
        android:id="@+id/edt_hora_inicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:inputType="datetime"
        android:hint="@string/hora_inicio"
        android:singleLine="true"/>

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/margin_top_form_servicio"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:scaleType="centerCrop"
            android:layout_marginStart="@dimen/margin_izq_icon"
            android:src="@mipmap/ic_lugar_termino"/>

        <EditText
            android:id="@+id/edt_lugar_termino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:inputType="text"
            android:hint="@string/lugar_termino"
            android:singleLine="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/margin_top_form_servicio"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:scaleType="centerCrop"
            android:layout_marginStart="@dimen/margin_izq_icon"
            android:src="@mipmap/ic_hora_termino"/>

        <EditText
            android:id="@+id/edt_hora_termino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:inputType="datetime"
            android:hint="@string/hora_termino"
            android:singleLine="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/margin_top_form_servicio"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:scaleType="centerCrop"
            android:layout_marginStart="@dimen/margin_izq_icon"
            android:src="@mipmap/ic_radio"/>

        <EditText
            android:id="@+id/edt_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:inputType="number"
            android:hint="@string/radio"
            android:singleLine="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal|center_vertical">

        <Button
            android:id="@+id/btn_agregar_vuelta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="@color/colorHighlight"
            android:text="Agregar" />

    </LinearLayout>

</LinearLayout>